--- a/Patrick-Home.html
+++ b/Patrick-Home.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Patrick Schaefer</title>
+        <link rel="stylesheet" href="CSS/style.css" />
     </head>
     <body>
         <h1>Patrick Schaefer</h1>
