--- a/About.html
+++ b/About.html
@@ -7,9 +7,12 @@
     <body>
         <header>
         <h1>Patrick Schaefer</h1>
-        <hr class="violet" />
+        <hr />
         <h2>Actor-Singer-Pianist</h2>
-        
     </header>
+    <h1 class="About"> About</h1>
     </body>
 </html>
+
+        
+
