--- a/Contact.html
+++ b/Contact.html
@@ -11,7 +11,7 @@
         <h2>Actor-Singer-Pianist</h2>
         
     </header>
-    <h1 class="About">Contact Me</h1>
+    
     <form method="GET" action="Patrick-Home.html">
         <button type="submit">Home</button>
         </form>
@@ -25,3 +25,10 @@
                 </form><form method="GET" action="Contact.html">
                     <button type="submit">Contact</button>
                     </form>
+        <br>
+        <br>
+        <nav class="Head">
+            <h1 class="About"> Contact Me</h1>
+        </nav>
+        </body>
+        </html>
