--- a/Gallery.html
+++ b/Gallery.html
@@ -26,6 +26,10 @@
                 </form><form method="GET" action="Contact.html">
                     <button type="submit">Contact</button>
                     </form>
-     <h1 class="About">Gallery</h1>
+    <br>
+    <br>
+    <nav class="Head">
+        <h1 class="About"> Gallery</h1>
+    </nav>
      </body>
      </html>
