--- a/Patrick-Home.html
+++ b/Patrick-Home.html
@@ -62,6 +62,9 @@
       <img class="pride" src="Pic/pride.png" alt="Happy Pride!">
   </aside>
 </div>
+<footer class="footerhome">
+    
+</footer>
   
     
         <script src="JS/myscript.js" ></script>
