--- a/Resume.html
+++ b/Resume.html
@@ -29,11 +29,11 @@
                     </form>
     <br>
     <br>
-    <br>
-    <h2 class="About"> Resume</h2>
+    <nav class="Head">
+        <h1 class="About"> Resume</h1>
+    </nav>
+    
 
-    <h3>Role</h3>  <h3>Show</h3>
 
-    <p> Graduate of Otterbein College 2012.</p>
     </body>
     </html>
