Pride aside-all

--- a/Gallery.html
+++ b/Gallery.html
@@ -23,13 +23,21 @@
             <button type="submit">Resume</button>
             </form><form method="GET" action="Gallery.html">
                 <button type="submit">Gallery</button>
-                </form><form method="GET" action="Contact.html">
+                </form>
+                <form method="GET" action="Contact.html">
                     <button type="submit">Contact</button>
+                    </form>
+                    <form method="GET" action="https://soundcloud.com/pattyschaefs" target="_blank">
+                        <button class="soundcloud" type="submit"><img src="Pic/soundcloud.png" alt="Soundcloud" width=></button>
+
                     </form>
     <br>
     <br>
     <nav class="Head">
         <h1 class="About"> Gallery</h1>
     </nav>
+    <aside>
+        <img class="pride" src="Pic/pride.png" alt="Happy Pride!">
+    </aside>
      </body>
      </html>
