--- a/Patrick-Home.html
+++ b/Patrick-Home.html
@@ -25,6 +25,10 @@
                         <form method="GET" action="Contact.html">
                             <button type="submit">Contact</button>
                             </form>
+                            <form method="GET" action="https://soundcloud.com/pattyschaefs" target="_blank">
+                                <button class="soundcloud" type="submit"><img src="Pic/soundcloud.png" alt="Soundcloud" width=></button>
+
+                            </form>
             <br>
             <br>
             
@@ -54,10 +58,7 @@
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
   </div>
-  <form>
-  <a href="https://soundcloud.com/pattyschaefs" target="_blank">
-  <img class="soundcloud" src="Pic/soundcloud.png" > </a>
-  </form>
+  
   <aside>
       <img class="pride" src="Pic/pride.png" alt="Happy Pride!">
   </aside>
