Changes to Resume and adjustment About

--- a/Contact.html
+++ b/Contact.html
@@ -34,9 +34,20 @@
         <br>
         <nav class="Head">
             <h1 class="About"> Contact Me</h1>
+            <br>
+            <br>
         </nav>
         <aside>
             <img class="pride" src="Pic/pride.png" alt="Happy Pride!">
         </aside>
+
+        <form class="contact">
+            <label for="name">Name:</label><br />
+            <input type="text" id="name" name="name"><br /> <br>
+            <label for="email">Email Address: </label><br /> 
+            <input type="email" id="email" name="email"><br /><br>
+            <label for="regarding">Type your Message Here: </label><br />
+            <input type='text'id="regarding" name="regarding"><br><br>
+        </form>
         </body>
         </html>
