--- a/Resume.html
+++ b/Resume.html
@@ -35,6 +35,17 @@
     <nav class="Head">
         <h1 class="About"> Resume</h1>
     </nav>
+    <section class="Role">
+        <h3>Role</h3>
+        <br>
+        <p>Lead</p>
+        <br>
+        <p>Lead</p>
+        <br>
+       <p>Supporting </p>
+        
+
+    </section>
     
 
     <aside>
