Columns on Resume

--- a/Gallery.html
+++ b/Gallery.html
@@ -3,6 +3,7 @@
     <head>
         <title>Patrick Schaefer</title>
         <link rel="stylesheet" href="CSS/style.css" />
+        <link rel="stylsheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"/>
     </head>
     <body>
         <header>
