--- a/Contact.html
+++ b/Contact.html
@@ -40,14 +40,16 @@
         <aside>
             <img class="pride" src="Pic/pride.png" alt="Happy Pride!">
         </aside>
-
+        <fieldset>
         <form class="contact">
             <label for="name">Name:</label><br />
-            <input type="text" id="name" name="name"><br /> <br>
+            <input type="text" id="name" name="name" placeholder="Type your Name" required><br /> <br>
             <label for="email">Email Address: </label><br /> 
-            <input type="email" id="email" name="email"><br /><br>
+            <input type="email" id="email" name="email" placeholder="email" required><br /><br>
             <label for="regarding">Type your Message Here: </label><br />
-            <input type='text'id="regarding" name="regarding"><br><br>
+            <input type='text'id="regarding" name="regarding" placeholder="Type message here" required><br><br>
+            <input class="submit" type="submit" id="submit" name="Submit">
         </form>
+    </fieldset>
         </body>
         </html>
