--- a/Resume.html
+++ b/Resume.html
@@ -106,12 +106,9 @@
     </div>
     <article>
         <h4>Skills</h4>
-    
-        <ul>
-            <li>Piano</li>
-            <li>Dialects</li>
-            <li>Impersonations</li>
-        </ul>
+       <h5>Piano</h5>
+       <h5>Impersonations</h5>
+       <h5>Dialects</h5>
     </article>
 
     
