Photo Gallery Complete

--- a/Gallery.html
+++ b/Gallery.html
@@ -37,6 +37,23 @@
     <nav class="Head">
         <h1 class="About"> Photos</h1>
     </nav>
+    <br>
+    <br>
+    <div class="row">
+        <div class="column">
+            <img src="Pic/Mia.jpg" alt="Mamma Mia" width="200px">
+            <img src="Pic/piano2.jpg" alt="Piano" width="200px">
+            <img src="Pic/My_way.jpg" alt="My Way" width="200px">
+            <img src="Pic/recent.jpg" alt="Recent Show" width="200px">
+        </div>
+        <div class="column">
+            <img src="Pic/Godspell.jpg" width="200px" alt="Godspell">
+            <img src="Pic/Q.jpg" width="200px" alt="Q">
+            <img src="Pic/black.jpg" alt="Tarzan" width="200px">
+            <img src="Pic/tuck.jpg" alt="Tuck" width="200px">
+       
+        </div>
+    </div>
   
   <script src="JS/myscript.js"></script>
     <aside>
