--- a/Contact.html
+++ b/Contact.html
@@ -27,9 +27,10 @@
                     <button type="submit">Contact</button>
                     </form>
                     <form method="GET" action="https://soundcloud.com/pattyschaefs" target="_blank">
-                        <button class="soundcloud" type="submit"><img src="Pic/soundcloud.png" alt="Soundcloud" width=></button>
+                        <button class="soundcloud" type="submit">Soundcloud</button>
 
                     </form>
+        <br>
         <br>
         <br>
         <nav class="Head">
@@ -47,7 +48,7 @@
             <label for="email">Email Address: </label><br /> 
             <input type="email" id="email" name="email" placeholder="email" required><br /><br>
             <label for="regarding">Type your Message Here: </label><br />
-            <input type='text'id="regarding" name="regarding" placeholder="Type message here" required><br><br>
+            <input class="Tell" type='text'id="regarding" name="regarding" placeholder="Type message here" required><br><br>
             <input class="submit" type="submit" id="submit" name="Submit">
         </form>
     </fieldset>
