--- a/Resume.html
+++ b/Resume.html
@@ -30,9 +30,10 @@
                     <button type="submit">Contact</button>
                     </form>
                     <form method="GET" action="https://soundcloud.com/pattyschaefs" target="_blank">
-                        <button class="soundcloud" type="submit"><img src="Pic/soundcloud.png" alt="Soundcloud" width=></button>
+                        <button class="soundcloud" type="submit">Soundcloud</button>
 
                     </form>
+    <br>
     <br>
     <br>
     <nav class="Head">
@@ -106,9 +107,12 @@
     </div>
     <article>
         <h4>Skills</h4>
-       <h5>Piano</h5>
-       <h5>Impersonations</h5>
-       <h5>Dialects</h5>
+       <ul>
+           <li>Piano</li>
+           <li>Tap</li>
+           <li>Dialects</li>
+       </ul>
+       
     </article>
 
     
