--- a/Patrick-Home.html
+++ b/Patrick-Home.html
@@ -26,7 +26,7 @@
                             <button type="submit">Contact</button>
                             </form>
                             <form method="GET" action="https://soundcloud.com/pattyschaefs" target="_blank">
-                                <button class="soundcloud" type="submit"><img src="Pic/soundcloud.png" alt="Soundcloud" width=></button>
+                                <button class="soundcloud" type="submit">Soundcloud</button>
 
                             </form>
             <br>
