--- a/Contact.html
+++ b/Contact.html
@@ -42,13 +42,28 @@
             <img class="pride" src="Pic/pride.png" alt="Happy Pride!">
         </aside>
         <fieldset>
-        <form class="contact">
-            <label for="name">Name:</label><br />
-            <input type="text" id="name" name="name" placeholder="Type your Name" required><br /> <br>
-            <label for="email">Email Address: </label><br /> 
-            <input type="email" id="email" name="email" placeholder="email" required><br /><br>
-            <label for="regarding">Type your Message Here: </label><br />
-            <input class="Tell" type='text'id="regarding" name="regarding" placeholder="Type message here" required><br><br>
+        <form class="contact" action="https://formspree.io/mzbjknby" method="POST">
+            <label for="name">
+                Name:
+            </label>
+                <br />
+            <input type="text" id="name" name="name" placeholder="Type your Name" required>
+            <br />
+             <br>
+            <label for="email">
+                Email Address: 
+            </label>
+            <br /> 
+            <input type="email" id="email" name="email" placeholder="email" required>
+            <br />
+            <br>
+            <label for="regarding">T
+                ype your Message Here: 
+            </label>
+            <br />
+            <input class="Tell" type='text'id="regarding" name="regarding" placeholder="Type message here" required>
+            <br>
+            <br>
             <input class="submit" type="submit" id="submit" name="Submit">
         </form>
     </fieldset>
