READ.me updated

--- a/Contact.html
+++ b/Contact.html
@@ -47,25 +47,33 @@
                 Name:
             </label>
                 <br />
+                <br>
             <input type="text" id="name" name="name" placeholder="Type your Name" required>
             <br />
+             <br>
              <br>
             <label for="email">
                 Email Address: 
             </label>
             <br /> 
+            <br>
             <input type="email" id="email" name="email" placeholder="email" required>
             <br />
+            <br>
             <br>
             <label for="regarding">T
                 ype your Message Here: 
             </label>
             <br />
+            <br>
             <input class="Tell" type='text'id="regarding" name="regarding" placeholder="Type message here" required>
+            <br>
             <br>
             <br>
             <input class="submit" type="submit" id="submit" name="Submit">
         </form>
     </fieldset>
-        </body>
+    <img class="headshot" src="Pic/headshot2.jpg" alt="my headshot" width="300px" height="400px">
+  
+    </body>
         </html>
