--- a/Patrick-Home.html
+++ b/Patrick-Home.html
@@ -50,7 +50,7 @@
   
     <div class="mySlides fade">
       <div class="numbertext">3 / 3</div>
-      <img src="Pic/Godspell.jpg" style="width:600px" height="400px">
+      <img src="Pic/mo.jpg" style="width:600px" height="400px">
       <div class="text">Godspell</div>
     </div>
   
@@ -63,6 +63,7 @@
       <img class="pride" src="Pic/pride.png" alt="Happy Pride!">
   </aside>
 </div>
+
 <footer class="footerhome">
     
 </footer>
