--- a/Contact.html
+++ b/Contact.html
@@ -61,8 +61,7 @@
             <br />
             <br>
             <br>
-            <label for="regarding">T
-                ype your Message Here: 
+            <label for="regarding">Type your Message Here: 
             </label>
             <br />
             <br>
