--- a/Patrick-Home.html
+++ b/Patrick-Home.html
@@ -35,7 +35,8 @@
 <!-- Slideshow container -->
 <div  class="slideshow-container">
 
-    <!-- Full-width images with number and caption text -->
+    <!-- Image Carousel -->
+
     <div class="mySlides fade">
       <div class="numbertext">1 / 3</div>
       <img src="Pic/headshot.jpg" style="width:600px" height="400px">
@@ -55,10 +56,13 @@
     </div>
   
     <!-- Next and previous buttons -->
+
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
   </div>
   
+  
+
   <aside>
       <img class="pride" src="Pic/pride.png" alt="Happy Pride!">
   </aside>
